twitter tweet added

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -23,17 +23,31 @@
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"
         ></script>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            This is Al Nassr! This is who we are! 🔥
+            <a href="https://t.co/uh5e9vRNbv">pic.twitter.com/uh5e9vRNbv</a>
+          </p>
+          &mdash; Cristiano Ronaldo (@Cristiano)
+          <a
+            href="https://twitter.com/Cristiano/status/1971675969137303570?ref_src=twsrc%5Etfw"
+            >September 26, 2025</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
       </article>
       <aside>
-        <p>
-            placceholder to add comment thread later
-        </p>
+        <p>placceholder to add comment thread later</p>
       </aside>
     </main>
     <footer>
-        <p>
-            Made by Isreal - <a href="/base_index.html" target="_blank">here</a>.
-        </p>
+      <p>
+        Made by Isreal - <a href="/base_index.html" target="_blank">here</a>.
+      </p>
     </footer>
   </body>
 </html>
