--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -58,14 +58,12 @@
         </table>
       </article>
       <aside>
-        <p>placeholder to add comment thread later</p>
+        placeholder to add comment thread later
       </aside>
     </main>
     <footer>
-      <p>
         Made by Isreal Nwaminogbe -
-        <a href="/base_index.html" target="_blank">here</a>.
-      </p>
+        <a href="/base_index.html" target="_blank">here</a>
     </footer>
   </body>
 </html>
