--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -41,13 +41,11 @@
         ></script>
       </article>
       <aside>
-        <p>placceholder to add comment thread later</p>
+        placeholder to add comment thread later
       </aside>
     </main>
     <footer>
-      <p>
-        Made by Isreal - <a href="/base_index.html" target="_blank">here</a>.
-      </p>
+        Made by Isreal - <a href="/base_index.html" target="_blank">here</a>
     </footer>
   </body>
 </html>
