--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -62,8 +62,7 @@
       </aside>
     </main>
     <footer>
-        Made by Isreal Nwaminogbe -
-        <a href="/base_index.html" target="_blank">here</a>
+        Made by Isreal Nwaminogbe - <a href="/base_index.html" target="_blank">here</a>
     </footer>
   </body>
 </html>
