--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -30,11 +30,14 @@
           ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX icon"
         /></a>
         <table>
+          <thead>
             <tr>
                 <th>Name</th>
                 <th>Age</th>
                 <th>Country</th>
             </tr>
+            </thead>
+          <tbody>
             <tr>
                 <td>John</td>
                 <td>25</td>
@@ -54,7 +57,8 @@
                 <td>Sophia</td>
                 <td>21</td>
                 <td>UK</td>
-            </tr>    
+            </tr> 
+            </tbody>
         </table>
       </article>
       <aside>
