--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,6 +62,9 @@
     </section>
     <footer>
        Made by Nwaminmogbe Isreal - <a href="/base_index.html" target="_blank">here</a>
+      <p>
+        &copy; 2024 Nwaminogbe Isreal
+      </p>
     </footer>
   </body>
 </html>
